sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:18: error: Unmatched closing brace '}' ignored here
}
^